fix: make your bots title visible in dark mode

--- a/packages/bot-web-ui/src/components/dashboard/dashboard-component/load-bot-preview/index.scss
+++ b/packages/bot-web-ui/src/components/dashboard/dashboard-component/load-bot-preview/index.scss
@@ -66,6 +66,7 @@
         font-size: var(--text-size-s);
         font-weight: 700;
         margin: 1.5rem;
+        color: var(--text-general);
     }
 
     &__button-group {
